--- a/articles/fff26705f09288.md
+++ b/articles/fff26705f09288.md
@@ -3,7 +3,7 @@ title: "【Laravel】Exceptionが起こることを確認するテスト"
 emoji: "😺"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["Laravel", "PHP"]
-published: false
+published: true
 ---
 laravelで単体テストを実装していて、Exceptionが発生することをテストの仕方を忘れるのでメモ
 # expectExceptionを使う
@@ -14,8 +14,11 @@ public function testHogeException()
 {
     $hoge = new HogeClass();
 
-    $this->expectException() // 必ず先にexpectExceptionを実行
+    $this->expectException(Exception::class) // 必ず先にexpectExceptionを実行
 
     $hoge->hogeFunction() //
 }
 ```
+:::message
+必ずexpectExceptionを先に実行しておく
+:::
