--- a/articles/7ee2dd808ce988.md
+++ b/articles/7ee2dd808ce988.md
@@ -1,5 +1,5 @@
 ---
-title: "Laravelのlistenerを非同期で動かす"
+title: "Laravelのリスナを非同期で動かす"
 emoji: "📝"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [laravel]
