トピック追加

--- a/articles/bcae82b83d1420.md
+++ b/articles/bcae82b83d1420.md
@@ -2,7 +2,7 @@
 title: "DDDのエンティティって何なの？"
 emoji: "📘"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["DDD"]
+topics: ["DDD","ドメイン駆動設計"]
 published: true
 ---
 # はじめに
