--- a/articles/94dfff99913b5d.md
+++ b/articles/94dfff99913b5d.md
@@ -11,4 +11,30 @@ Goのhttpパッケージについて勉強していたときのこと。
 # この記事のゴール
 - Handle、HandlerFunc、HandleFuncの違いを理解して使いこなす
 # 結論
-- 
+- Handleは
+- HandleFuncはパスと`func(ResponseWriter, *Request)`を受け取り、処理内容を実装する
+# HandleFunc
+HandleFuncは以下のように使うことができます。
+```go
+http.HandleFunc("/HandleFunc", func(w http.ResponseWriter, r *http.Request) {
+	fmt.Fprintf(w, "handle func")
+})
+```
+第一引数にパス、第二引数に`func(w http.ResponseWriter, r *http.Request)`のシグネチャを持つ関数を受け取ります。
+また、シグネチャが同じであれば関数を渡すことも可能です。
+```go
+func hoge(w http.ResponseWriter, r *http.Request) {
+	fmt.Fprintf(w, "handle func")
+}
+func main() {
+    http.HandleFunc("/HandleFunc, hoge)
+}
+```
+以下はhttpパッケージに実装されているHandleFuncです。
+```go
+func HandleFunc(pattern string, handler func(ResponseWriter, *Request)) {
+	DefaultServeMux.HandleFunc(pattern, handler)
+}
+```
+パスのパターンとハンドラを受け取って`マルチプレクサ`に登録します。
+これによりパスとハンドラが関連づけられています。
