--- a/articles/94dfff99913b5d.md
+++ b/articles/94dfff99913b5d.md
@@ -1,5 +1,5 @@
 ---
-title: "【Go】HandleとHandlerFuncとHandleFuncがややこしいのでまとめる"
+title: "【Go】Handle?Handler?HandlerFunc?HandleFunc?ややこしいのでまとめてみた"
 emoji: "🗂"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [Golang]
@@ -7,12 +7,14 @@ published: false
 ---
 # これは何
 Goのhttpパッケージについて勉強していたときのこと。
-**「Handle、HandlerFunc、HandleFuncってややこしすぎん？」** と思ったのでそれぞれの違いをまとめたものです。
+**「Handle、Handler、HandlerFunc、HandleFuncって名前ややこしすぎん？何が違うの？」** と思ったのでそれぞれの違いをまとめたものです。
 # この記事のゴール
-- Handle、HandlerFunc、HandleFuncの違いを理解して使いこなす
+- Handle、Handler、HandlerFunc、HandleFuncの違いを理解する。
 # 結論
+- HandleFuncはパスと処理内容を関連づけている。
+- HandlerFuncは`func(ResponseWriter, Request)`を表す型でHandlerを実装している
+- Handlerは
 - Handleは
-- HandleFuncはパスと`func(ResponseWriter, *Request)`を受け取り、処理内容を実装する
 # HandleFunc
 HandleFuncは以下のように使うことができます。
 ```go
@@ -30,7 +32,7 @@ func main() {
     http.HandleFunc("/HandleFunc, hoge)
 }
 ```
-以下はhttpパッケージに実装されているHandleFuncです。
+以下はhttpパッケージに実装されているHandleFunc関数です。
 ```go
 func HandleFunc(pattern string, handler func(ResponseWriter, *Request)) {
 	DefaultServeMux.HandleFunc(pattern, handler)
@@ -38,3 +40,25 @@ func HandleFunc(pattern string, handler func(ResponseWriter, *Request)) {
 ```
 パスのパターンとハンドラを受け取って`マルチプレクサ`に登録します。
 これによりパスとハンドラが関連づけられています。
+# HandlerFunc
+HandleFuncに似た名前のものに`HandlerFunc`があります。
+これの実装を見てみます。
+```go
+type HandlerFunc func(ResponseWriter, *Request)
+
+// ServeHTTP calls f(w, r).
+func (f HandlerFunc) ServeHTTP(w ResponseWriter, r *Request) {
+	f(w, r)
+}
+```
+HandleFuncは関数だったのに対し、`HandlerFunc`は型です。
+よく考えてみれば、Handleという**動詞**とHandlerという**名詞**なので品詞で区別するとわかりやすいかもしれません。
+また、`ServeHTTP`メソッドを実装しているので、`Handlerインターフェース`（後述）を満たしています。
+`ServeHTTP`が実行されると自身の関数が実行されるようになっています。
+# Handler 
+httpパッケージにおける`Handler`はServeHTTPを持つインターフェースです。
+```go
+type Handler interface {
+	ServeHTTP(ResponseWriter, *Request)
+}
+```
