--- a/articles/94dfff99913b5d.md
+++ b/articles/94dfff99913b5d.md
@@ -11,10 +11,10 @@ Goのhttpパッケージについて勉強していたときのこと。
 # この記事のゴール
 - Handle、Handler、HandlerFunc、HandleFuncの違いを理解する。
 # 結論
-- HandleFuncはパスと処理内容を関連づけている。
-- HandlerFuncは`func(ResponseWriter, Request)`を表す型でHandlerを実装している
-- Handlerは
-- Handleは
+- HandleFuncはパスと`func(ResponseWriter, *Request)`を関連づけている。
+- Handlerは`HTTPServe(ResponseWriter, *Request)`を持つインターフェース。
+- HandlerFuncは`func(ResponseWriter, *Request)`を表す型でHandlerを実装している。
+- Handleはパスと`Handlerインターフェース`を関連づけている。
 # HandleFunc
 HandleFuncは以下のように使うことができます。
 ```go
@@ -56,9 +56,26 @@ HandleFuncは関数だったのに対し、`HandlerFunc`は型です。
 また、`ServeHTTP`メソッドを実装しているので、`Handlerインターフェース`（後述）を満たしています。
 `ServeHTTP`が実行されると自身の関数が実行されるようになっています。
 # Handler 
-httpパッケージにおける`Handler`はServeHTTPを持つインターフェースです。
+次に`Handler`ですが、これはServeHTTPメソッドを持つインターフェースです。
+先ほどのHandlerFuncがこのインターフェースを満たしていました。
 ```go
 type Handler interface {
 	ServeHTTP(ResponseWriter, *Request)
 }
+```
+# Handle
+最後に`Handle`を見てみます。
+```go
+func Handle(pattern string, handler Handler) { DefaultServeMux.Handle(pattern, handler) }
+```
+Handleは第二引数に`Handlerインターフェース`を取るようになっています。
+実装の内容としてはマルチプレクサにパスとhandlerを渡し、双方を関連づけています。
+やっていることは`HandleFunc`と同じですね。
+違いは、Handleが`Handlerインターフェース`を使っているのに対し、HandleFuncは`func(ResponseWriter, *Request)`を使っているという点です。
+# 実際の使い方
+## HandleFunc
+```go
+http.HandleFunc("/HandleFunc", func(w http.ResponseWriter, r *http.Request) {
+	fmt.Fprintf(w, "handle func")
+})
 ```
