--- a/articles/73ad09fce739d7.md
+++ b/articles/73ad09fce739d7.md
@@ -6,11 +6,14 @@ topics: ["DDD", "設計"]
 published: false
 ---
 # これは何？
-DDDの設計においてどういう風にドメインサービスを使うのかを自分なりに書き記したもの。
+DDDの設計においてどういう風にドメインサービスを使うのかを自分なりに書きます。
+エンティティ使って実装しようとしたけど、どうにも違和感があるということがあったので、ドメインサービスを実装しました。
 # 結論
 - エンティティじゃできないけどドメイン層に書きたい処理はドメインサービスに実装する。
 - ドメインサービスを使いすぎるとドメインモデル貧血症になるから要注意。
 # ドメインサービスの役割
 ドメインサービスはエンティティに書くと不自然になってしまうロジックを実装する役割があります。
 いわばエンティティをサポートするような存在です。
-## 具体例
+# 具体例
+## エンティティ
+## ドメインサービス
