--- a/articles/6b98a30b266a85.md
+++ b/articles/6b98a30b266a85.md
@@ -1,5 +1,5 @@
 ---
-title: "【Go】httprouterのGlobalOptionsを使ってCORSを学んでみた"
+title: "【Go】EchoとNextjsを使ってCORSを学んでみた"
 emoji: "😎"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [Golang, CORS]
@@ -29,16 +29,19 @@ httpが`スキーム`、example.comが`ドメイン`、80が`ポート`です。
 CORSを使う目的は、異なるオリジンにあるリソースにアクセスを許可することです。
 なぜわざわざ許可するのかというと、リソースをFetchする時には`同一オリジンポリシー`というポリシーがあるためです。
 ### 同一オリジンポリシー
-
+同一オリジンポリシーは、そのままですが、同じオリジンからのアクセスのみを許可する仕組みです。
+デフォルトでこの状態になっているため、異なるオリジンからのリクエストを許可したい場合にはCORSを使う必要があります。
 ## リクエストヘッダの役割
 ## レスポンスヘッダの役割
-# httprouter
-httprouterはリクエストのルーティングを行ってくれるGoのパッケージです。
-基本的な使い方はREADMEを参照してください。
-https://github.com/julienschmidt/httprouter
-本記事ではその中でも、`GlobalOptions`という`OPTIONS`メソッドに対する処理を実装できる機能を取り上げます。
-## GlobalOptions
 # 実験してみる
-## 模擬的なPreflight request
+## echo
+echoはGoのWebフレームワークです。
+基本的な使い方はREADMEを参照してください。
+https://github.com/labstack/echo
+今回はechoのミドルウェア機能を使ってCORSを実現したいと思います。
+## ミドルウェアを使ったCORS
+https://echo.labstack.com/docs/middleware/cors
+## Next.js
+## GET
 ### リクエストヘッダ
 ### レスポンスヘッダ
