--- a/articles/6b98a30b266a85.md
+++ b/articles/6b98a30b266a85.md
@@ -2,7 +2,7 @@
 title: "【Go】EchoとNextjsを使ってCORSを学んでみた"
 emoji: "🔒"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: [Golang, CORS]
+topics: [Golang, echo, CORS]
 published: true
 ---
 # これは何
