--- a/articles/591e0091feb5ca.md
+++ b/articles/591e0091feb5ca.md
@@ -6,8 +6,8 @@ topics: []
 published: false
 ---
 # これは何
-以前、SOLID原則なるものを学んだので一つずつ解説する記事を書いてみたいと思います。
-今回はSOLIDのS、単一責任の原則についてです。
+以前、SOLID原則について学んだので一つずつ解説する記事を書いてみたいと思います。
+今回はSOLIDの**S**、単一責任の原則についてです。
 # この記事のゴール
 - 単一責任の原則で何が解決できるかを理解する
 # 単一責任の原則とは
