--- a/articles/591e0091feb5ca.md
+++ b/articles/591e0091feb5ca.md
@@ -12,3 +12,7 @@ published: false
 - 単一責任の原則で何が解決できるかを理解する
 # 単一責任の原則とは
 モジュールの責任は一つに限定しましょう、という原則です。
+責任という言葉だと分かりづらいので言い換えると、そのモジュールでやりたい目的を絞りましょうということです。
+# xxxServiceクラス
+みなさんの周りで`xxxService`といったクラスを見かけることはないでしょうか。
+
