--- a/articles/591e0091feb5ca.md
+++ b/articles/591e0091feb5ca.md
@@ -14,5 +14,4 @@ published: false
 モジュールの責任は一つに限定しましょう、という原則です。
 責任という言葉だと分かりづらいので言い換えると、そのモジュールでやりたい目的を絞りましょうということです。
 # xxxServiceクラス
-みなさんの周りで`xxxService`といったクラスを見かけることはないでしょうか。
-
+自分が仕事で関わっているシステムに`xxxService`というクラスがありました
