--- a/articles/591e0091feb5ca.md
+++ b/articles/591e0091feb5ca.md
@@ -6,12 +6,13 @@ topics: []
 published: false
 ---
 # これは何
-以前、SOLID原則について学んだので一つずつ解説する記事を書いてみたいと思います。
-今回はSOLIDの**S**、単一責任の原則についてです。
+業務の中で神クラスを解体することがあったので、
 # この記事のゴール
+- 神クラスを解体する過程について知る
 - 単一責任の原則で何が解決できるかを理解する
 # 単一責任の原則とは
 モジュールの責任は一つに限定しましょう、という原則です。
 責任という言葉だと分かりづらいので言い換えると、そのモジュールでやりたい目的を絞りましょうということです。
-# xxxServiceクラス
+# 具体例
+いわゆる`神クラス`となってしまっているような具体例を考えてみます。
 自分が仕事で関わっているシステムに`xxxService`というクラスがありました
