--- a/articles/591e0091feb5ca.md
+++ b/articles/591e0091feb5ca.md
@@ -1,18 +1,21 @@
 ---
-title: "【SOLID】PHPで学ぶ単一責任の原則"
+title: "巨大クラスを解体しながら学ぶ単一責任の原則"
 emoji: "🎉"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: []
 published: false
 ---
 # これは何
-業務の中で神クラスを解体することがあったので、
+今回の記事では、役割が不明確になってしまったいわゆる神クラスを解体しながら**単一責任の原則**について考えあたいと思います。
+先日、業務で神クラスを解体し、責務を考えて実装することの大事さを実感したのが動機です。
 # この記事のゴール
-- 神クラスを解体する過程について知る
 - 単一責任の原則で何が解決できるかを理解する
-# 単一責任の原則とは
-モジュールの責任は一つに限定しましょう、という原則です。
-責任という言葉だと分かりづらいので言い換えると、そのモジュールでやりたい目的を絞りましょうということです。
+# 単一責任の原則
+単一責任の原則は**モジュールの責任は一つに限定しましょう**、という原則です。
 # 具体例
 いわゆる`神クラス`となってしまっているような具体例を考えてみます。
-自分が仕事で関わっているシステムに`xxxService`というクラスがありました
+## 改善前
+## 良くない点
+## 改善方法
+## 改善後
+## 良くなった点
