--- a/articles/349b8ca618585c.md
+++ b/articles/349b8ca618585c.md
@@ -15,7 +15,13 @@ published: false
 # 候補キーとは
 候補キーとは、**タプルを一意に決定できる最小の組み合わせ**です。
 タプルというのは聞き馴染みがないかもしれませんが、行のことです。
+また、**候補キーは1つとは限らず**、複数存在することもあります。
 # 主キーとは
+主キーは候補キーの中から1つ選んだものです。
+主キーとなる条件は以下の2つです。
+1. タプルを一意に決めることができる
+2. NULLを含まない
 
+候補キーの中からどれを主キーにするかはDBの目的に応じて選択する必要があります。
 # 具体例
 # 最後に
