--- a/articles/349b8ca618585c.md
+++ b/articles/349b8ca618585c.md
@@ -24,4 +24,17 @@ published: false
 
 候補キーの中からどれを主キーにするかはDBの目的に応じて選択する必要があります。
 # 具体例
+以下のような、注文された商品と顧客のデータを格納するテーブルの場合を考えます。
+|注文番号|名前|電話番号|メールアドレス|注文品|
+|---|---|---|---|---|
+|1|田中太郎|11111111111|taro@hoge.com|カレー|
+|1|田中太郎|11111111111|taro@hoge.com|ラーメン|
+|2|鈴木一郎|22222222222|ichiro@hoge.com|ラーメン|
+|3|佐藤三郎|33333333333|saburo@hoge.com|寿司|
+|3|佐藤三郎|33333333333|saburo@hoge.com|チャーハン|
+|4|髙橋四郎|44444444444|shiro@hoge.com|カレー|
+
+さらに条件として
+- 顧客は一度に複数の注文ができる
+- 
 # 最後に
