候補キー 投稿

--- a/articles/349b8ca618585c.md
+++ b/articles/349b8ca618585c.md
@@ -1,9 +1,9 @@
 ---
-title: "【DB】候補キーの決め方について"
+title: "【DB】候補キーの決め方"
 emoji: "🔑"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [DB]
-published: false
+published: true
 ---
 # これは何
 最近DBスペシャリストの勉強を始めたippeiです。
@@ -16,25 +16,28 @@ published: false
 候補キーとは、**タプルを一意に決定できる最小の組み合わせ**です。
 タプルというのは聞き馴染みがないかもしれませんが、行のことです。
 また、**候補キーは1つとは限らず**、複数存在することもあります。
-# 主キーとは
-主キーは候補キーの中から1つ選んだものです。
-主キーとなる条件は以下の2つです。
-1. タプルを一意に決めることができる
-2. NULLを含まない
-
-候補キーの中からどれを主キーにするかはDBの目的に応じて選択する必要があります。
 # 具体例
+ここから候補キーの決め方の具体例を挙げて考えたいと思います。
 以下のような、注文された商品と顧客のデータを格納するテーブルの場合を考えます。
-|注文番号|名前|電話番号|メールアドレス|注文品|
-|---|---|---|---|---|
-|1|田中太郎|11111111111|taro@hoge.com|カレー|
-|1|田中太郎|11111111111|taro@hoge.com|ラーメン|
-|2|鈴木一郎|22222222222|ichiro@hoge.com|ラーメン|
-|3|佐藤三郎|33333333333|saburo@hoge.com|寿司|
-|3|佐藤三郎|33333333333|saburo@hoge.com|チャーハン|
-|4|髙橋四郎|44444444444|shiro@hoge.com|カレー|
+|注文番号|名前|電話番号|メールアドレス|商品番号|商品|
+|---|---|---|---|---|---|
+|1|田中太郎|11111111111|taro@hoge.com|1|カレー|
+|1|田中太郎|11111111111|taro@hoge.com|2|ラーメン|
+|2|鈴木一郎|22222222222|ichiro@hoge.com|2|ラーメン|
+|3|佐藤三郎|33333333333|saburo@hoge.com|3|寿司|
+|3|佐藤三郎|33333333333|saburo@hoge.com|4|チャーハン|
+|4|髙橋四郎|44444444444|shiro@hoge.com|1|カレー|
 
-さらに条件として
+条件として
 - 顧客は一度に複数の注文ができる
-- 
+- 一度の注文で同じ商品を注文しない
+- 商品番号に対して商品は重複しない
+
+とします。
+タプルを1つに決めるには`{注文番号、名前、電話番号、メールアドレス、商品番号、商品}`が分かれば決まります。
+しかし、候補キーの条件はタプルを一意に決定できる**最小の**組み合わせです。
+この例の場合、`注文番号と商品`または`注文番号と商品番号`が分かればタプルを1つ特定することができます。
+そのため候補キーとしては`{注文番号、商品}`と`{注文番号、商品番号}`となります。
+このように候補キーは複数の場合もあります。
 # 最後に
+めちゃくちゃ簡単な例でしたが候補キーの決め方についてイメージを掴んでもらえたら嬉しいです。
