--- a/articles/591e0091feb5ca.md
+++ b/articles/591e0091feb5ca.md
@@ -1,21 +1,12 @@
 ---
-title: "巨大クラスを解体しながら学ぶ単一責任の原則"
+title: "【Go】GORMによるマイグレーションまでの手順"
 emoji: "🎉"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: [Golang, GORM, DB, MySQL]
 published: false
 ---
-# これは何
-今回の記事では、役割が不明確になってしまったいわゆる神クラスを解体しながら**単一責任の原則**について考えあたいと思います。
-先日、業務で神クラスを解体し、責務を考えて実装することの大事さを実感したのが動機です。
+どうも、ippeiです。
+先日から勉強のためにGoで開発しているんですが、その際にGORMを使ってDBに接続し、マイグレーションをしたのでその手順を記します。
 # この記事のゴール
-- 単一責任の原則で何が解決できるかを理解する
-# 単一責任の原則
-単一責任の原則は**モジュールの責任は一つに限定しましょう**、という原則です。
-# 具体例
-いわゆる`神クラス`となってしまっているような具体例を考えてみます。
-## 改善前
-## 良くない点
-## 改善方法
-## 改善後
-## 良くなった点
+- GORMによるマイグレーションまでの行程を理解する
+# GORMについて
