見出しを作成

--- a/articles/591e0091feb5ca.md
+++ b/articles/591e0091feb5ca.md
@@ -10,3 +10,11 @@ published: false
 # この記事のゴール
 - GORMによるマイグレーションまでの行程を理解する
 # GORMについて
+GORMはGo言語で使われるORMです。
+https://gorm.io/
+# 具体的な手順
+## データベースに接続
+## モデルを作成
+## マイグレーション実行
+# 結果
+# まとめ
