構成を記載

--- a/articles/591e0091feb5ca.md
+++ b/articles/591e0091feb5ca.md
@@ -11,10 +11,26 @@ published: false
 - GORMによるマイグレーションまでの行程を理解する
 # GORMについて
 GORMはGo言語で使われるORMです。
+- マイグレーションの機能がついている
+- 
 https://gorm.io/
 # 具体的な手順
+- 今回作るものの紹介
+  - Usersテーブルを作る
+  - 作成するカラムの紹介
+- 使うものの紹介
+- 環境
+https://gorm.io/docs/migration.html
 ## データベースに接続
+- gormをインストール
+- データベースにユーザーを用意する
+- database.goを用意する
+- mysqlのdsnの書き方
 ## モデルを作成
+- Userの構造体を作成する
+## マイグレーションを作成
+- migration.goの実装
 ## マイグレーション実行
+- 実行コマンド
 # 結果
 # まとめ
