--- a/articles/349b8ca618585c.md
+++ b/articles/349b8ca618585c.md
@@ -3,7 +3,7 @@ title: "【DB】候補キーの決め方"
 emoji: "🔑"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [DB]
-published: true
+published: false
 ---
 # これは何
 最近DBスペシャリストの勉強を始めたippeiです。
