--- a/articles/4cb451be33e948.md
+++ b/articles/4cb451be33e948.md
@@ -47,12 +47,22 @@ explain select * from actor where actor_id = 1;
 |  1 | SIMPLE      | actor | NULL       | const | PRIMARY       | PRIMARY | 2       | const |    1 |   100.00 | NULL  |
 +----+-------------+-------+------------+-------+---------------+---------+---------+-------+------+----------+-------+
 ```
-
 ### ref
 1件に絞ることができたconstに対して、refはインデックスを使って複数行を検索した場合に表示されます。
-先ほどの例ではfilm_actorテーブルのkeyにidx_fk_film_idと表示されています。
-これはfilm_idカラムの値で絞ることでidx_fk_film_idというインデックスを使用して検索を行っているということを示しています。
+以下の例ではaddressテーブルに対してcity_idで検索をかけています。
+出力された実行計画のkeyの項目にidx_fk_city_idとありますが、これはidx_fk_city_idというインデックスを使って検索をしていることを示しています。
+つまりcity_idにインデックスが貼られていますが、city_id=300のレコードが複数あるためrefとなっています。
 refが表示されている場合も高速な検索ができています。
+```sql
+explain select * from address where city_id = 300;
+```
+```
++----+-------------+---------+------------+------+----------------+----------------+---------+-------+------+----------+-------+
+| id | select_type | table   | partitions | type | possible_keys  | key            | key_len | ref   | rows | filtered | Extra |
++----+-------------+---------+------------+------+----------------+----------------+---------+-------+------+----------+-------+
+|  1 | SIMPLE      | address | NULL       | ref  | idx_fk_city_id | idx_fk_city_id | 2       | const |    2 |   100.00 | NULL  |
++----+-------------+---------+------------+------+----------------+----------------+---------+-------+------+----------+-------+
+```
 ### eq_ref
 eq_refはテーブル結合でにユニークキーやプライマリーキーを使った時に表示されます。
 先ほどの例ではactorテーブルのtypeがeq_refとなっています。
