--- a/articles/4cb451be33e948.md
+++ b/articles/4cb451be33e948.md
@@ -64,13 +64,38 @@ explain select * from address where city_id = 300;
 +----+-------------+---------+------------+------+----------------+----------------+---------+-------+------+----------+-------+
 ```
 ### eq_ref
-eq_refはテーブル結合でにユニークキーやプライマリーキーを使った時に表示されます。
-先ほどの例ではactorテーブルのtypeがeq_refとなっています。
+eq_refはテーブル結合にユニークキーやプライマリーキーを使った時に表示されます。
+以下の例ではactorテーブルのtypeがeq_refとなっています。
 これはfilm_actorテーブルとactorテーブルを結合する際にプライマリーキーであるactor_idを使用しているので、1件のみの取得となりeq_refが表示されています。
 eq_refの場合も高速な検索ができています。
+```sql
+explain
+select
+    first_name,
+    last_name
+from
+    actor
+    left join
+        film_actor
+    on  actor.actor_id = film_actor.actor_id
+    left join
+        film
+    on  film.film_id = film_actor.film_id
+where
+    film.film_id in (3, 4, 5);
+```
+```
++----+-------------+------------+------------+--------+------------------------+----------------+---------+----------------------------+------+----------+--------------------------+
+| id | select_type | table      | partitions | type   | possible_keys          | key            | key_len | ref                        | rows | filtered | Extra                    |
++----+-------------+------------+------------+--------+------------------------+----------------+---------+----------------------------+------+----------+--------------------------+
+|  1 | SIMPLE      | film       | NULL       | range  | PRIMARY                | PRIMARY        | 2       | NULL                       |    3 |   100.00 | Using where; Using index |
+|  1 | SIMPLE      | film_actor | NULL       | ref    | PRIMARY,idx_fk_film_id | idx_fk_film_id | 2       | sakila.film.film_id        |    5 |   100.00 | Using where; Using index |
+|  1 | SIMPLE      | actor      | NULL       | eq_ref | PRIMARY                | PRIMARY        | 2       | sakila.film_actor.actor_id |    1 |   100.00 | NULL                     |
++----+-------------+------------+------------+--------+------------------------+----------------+---------+----------------------------+------+----------+--------------------------+
+```
 ### range
 rangeはインデックスを使って範囲検索（BETWEEN,IN,<,>など）を行った際に表示されます。
-例
+以下の例ではactor_idをin句で絞ることにより範囲検索を行っています。
 ```sql
 explain select first_name from actor where actor_id in (1,2,3,4,5);
 ```
@@ -82,5 +107,30 @@ explain select first_name from actor where actor_id in (1,2,3,4,5);
 +----+-------------+-------+------------+-------+---------------+---------+---------+------+------+----------+-------------+
 ```
 ### index
+indexはインデックスフルスキャンを行って取得している状態です。
+インデックスフルスキャンとは、インデックス全体を検索してデータを取得することです。
+以下の例では、actorテーブルのlast_nameカラムにインデックスが貼られており、last_nameを全件検索しているためindexと表示されています。
+```sql
+explain select last_name from actor;
+```
+```
++----+-------------+-------+------------+-------+---------------+---------------------+---------+------+------+----------+-------------+
+| id | select_type | table | partitions | type  | possible_keys | key                 | key_len | ref  | rows | filtered | Extra       |
++----+-------------+-------+------------+-------+---------------+---------------------+---------+------+------+----------+-------------+
+|  1 | SIMPLE      | actor | NULL       | index | NULL          | idx_actor_last_name | 182     | NULL |   10 |   100.00 | Using index |
++----+-------------+-------+------------+-------+---------------+---------------------+---------+------+------+----------+-------------+
+```
 ### ALL
+ALLはすべてのデータを順次検索をしている状態です。
+typeの中では最も遅い検索の方法となります。
+```sql
+explain select * from actor;
+```
+```
++----+-------------+-------+------------+------+---------------+------+---------+------+------+----------+-------+
+| id | select_type | table | partitions | type | possible_keys | key  | key_len | ref  | rows | filtered | Extra |
++----+-------------+-------+------------+------+---------------+------+---------+------+------+----------+-------+
+|  1 | SIMPLE      | actor | NULL       | ALL  | NULL          | NULL | NULL    | NULL |   10 |   100.00 | NULL  |
++----+-------------+-------+------------+------+---------------+------+---------+------+------+----------+-------+
+```
 ## まとめ
