--- a/articles/4cb451be33e948.md
+++ b/articles/4cb451be33e948.md
@@ -3,11 +3,11 @@ title: "【MySQL】実行計画のtypeについて調べてみた"
 emoji: "😊"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [DB, MySQL]
-published: false
+published: true
 ---
 ## はじめに
-MySQLの実行計画について勉強していた時、項目が多すぎて何を見たらいいのかわからなくなりました。
-今回はパフォーマンスに直接関連する**type**という項目に絞り、出力される内容についてまとめたいと思います。
+MySQLの実行計画を勉強していた際に、項目が多すぎて何を見たらいいのかわからなくなりました。
+そこで今回はパフォーマンスに直接関連する**type**という項目についてまとめたいと思います。
 ## そもそも実行計画とは？
 DBMSがユーザーからクエリを受け取ると以下のように処理を行います。
 
@@ -21,7 +21,7 @@ MySQLにおいては、`EXPLAIN`というコマンドを使うことでクエリ
 ```sql
 explain select * from actor;
 ```
-↓出力結果
+出力結果：
 ```
 +----+-------------+-------+------------+------+---------------+------+---------+------+------+----------+-------+
 | id | select_type | table | partitions | type | possible_keys | key  | key_len | ref  | rows | filtered | Extra |
@@ -29,18 +29,17 @@ explain select * from actor;
 |  1 | SIMPLE      | actor | NULL       | ALL  | NULL          | NULL | NULL    | NULL |   10 |   100.00 | NULL  |
 +----+-------------+-------+------------+------+---------------+------+---------+------+------+----------+-------+
 ```
-各項目の細かい内容については[公式ドキュメント](https://dev.mysql.com/doc/refman/8.0/ja/explain-output.html)を参照ください。
-## typeは検索方法を示す項目
+各項目の詳細については[公式ドキュメント](https://dev.mysql.com/doc/refman/8.0/ja/explain-output.html)を参照ください。
+## typeとは？
 typeはテーブルへのアクセス方法を示す項目です。
-この項目を見ることでテーブルにアクセスする際のインデックスの使用方法や絞り込みの方法等を知ることができます。
+この項目を確認することでテーブルにアクセスする際のインデックスの使用方法や絞り込みの方法等を知ることができます。
 ### const
-constはプライマリーキーやユニークキーを使った1行検索を行なった場合に表示されます。
-以下の例ではactorテーブルに対してプライマリーキーで検索を行っているためconstが表示されています。
+constはプライマリーキーやユニークキーを使った1行検索を行った場合に表示されます。
+以下の例ではactorテーブルに対してactor_idというプライマリーキーで検索を行っているためconstが表示されています。
 constが表示されている場合は高速な検索ができています。
-```sql
+```
 explain select * from actor where actor_id = 1;
-```
-```
+
 +----+-------------+-------+------------+-------+---------------+---------+---------+-------+------+----------+-------+
 | id | select_type | table | partitions | type  | possible_keys | key     | key_len | ref   | rows | filtered | Extra |
 +----+-------------+-------+------------+-------+---------------+---------+---------+-------+------+----------+-------+
@@ -48,15 +47,14 @@ explain select * from actor where actor_id = 1;
 +----+-------------+-------+------------+-------+---------------+---------+---------+-------+------+----------+-------+
 ```
 ### ref
-1件に絞ることができたconstに対して、refはインデックスを使って複数行を検索した場合に表示されます。
+1件に絞ることができたconstに対して、refはインデックスを使って複数行を検索を行った場合に表示されます。
 以下の例ではaddressテーブルに対してcity_idで検索をかけています。
 出力された実行計画のkeyの項目にidx_fk_city_idとありますが、これはidx_fk_city_idというインデックスを使って検索をしていることを示しています。
-つまりcity_idにインデックスが貼られていますが、city_id=300のレコードが複数あるためrefとなっています。
+つまりcity_idにインデックスが設定されていますが、city_id=300のレコードが複数あるためrefとなっています。
 refが表示されている場合も高速な検索ができています。
-```sql
+```
 explain select * from address where city_id = 300;
-```
-```
+
 +----+-------------+---------+------------+------+----------------+----------------+---------+-------+------+----------+-------+
 | id | select_type | table   | partitions | type | possible_keys  | key            | key_len | ref   | rows | filtered | Extra |
 +----+-------------+---------+------------+------+----------------+----------------+---------+-------+------+----------+-------+
@@ -64,11 +62,11 @@ explain select * from address where city_id = 300;
 +----+-------------+---------+------------+------+----------------+----------------+---------+-------+------+----------+-------+
 ```
 ### eq_ref
-eq_refはテーブル結合にユニークキーやプライマリーキーを使った時に表示されます。
+eq_refはテーブル結合にユニークキーやプライマリーキーを使って検索を行った場合に表示されます。
 以下の例ではactorテーブルのtypeがeq_refとなっています。
 これはfilm_actorテーブルとactorテーブルを結合する際にプライマリーキーであるactor_idを使用しているので、1件のみの取得となりeq_refが表示されています。
 eq_refの場合も高速な検索ができています。
-```sql
+```
 explain
 select
     first_name,
@@ -83,8 +81,7 @@ from
     on  film.film_id = film_actor.film_id
 where
     film.film_id in (3, 4, 5);
-```
-```
+
 +----+-------------+------------+------------+--------+------------------------+----------------+---------+----------------------------+------+----------+--------------------------+
 | id | select_type | table      | partitions | type   | possible_keys          | key            | key_len | ref                        | rows | filtered | Extra                    |
 +----+-------------+------------+------------+--------+------------------------+----------------+---------+----------------------------+------+----------+--------------------------+
@@ -94,12 +91,11 @@ where
 +----+-------------+------------+------------+--------+------------------------+----------------+---------+----------------------------+------+----------+--------------------------+
 ```
 ### range
-rangeはインデックスを使って範囲検索（BETWEEN,IN,<,>など）を行った際に表示されます。
+rangeはインデックスを使って範囲検索（BETWEEN,IN,<,>など）を行った場合に表示されます。
 以下の例ではactor_idをin句で絞ることにより範囲検索を行っています。
-```sql
+```
 explain select first_name from actor where actor_id in (1,2,3,4,5);
-```
-```
+
 +----+-------------+-------+------------+-------+---------------+---------+---------+------+------+----------+-------------+
 | id | select_type | table | partitions | type  | possible_keys | key     | key_len | ref  | rows | filtered | Extra       |
 +----+-------------+-------+------------+-------+---------------+---------+---------+------+------+----------+-------------+
@@ -107,13 +103,12 @@ explain select first_name from actor where actor_id in (1,2,3,4,5);
 +----+-------------+-------+------------+-------+---------------+---------+---------+------+------+----------+-------------+
 ```
 ### index
-indexはインデックスフルスキャンを行って取得している状態です。
+indexはインデックスフルスキャンを行った場合に表示されます。
 インデックスフルスキャンとは、インデックス全体を検索してデータを取得することです。
-以下の例では、actorテーブルのlast_nameカラムにインデックスが貼られており、last_nameを全件検索しているためindexと表示されています。
-```sql
+以下の例では、actorテーブルのlast_nameカラムにインデックスが設定されていて、last_nameを全件検索しているためindexと表示されています。
+```
 explain select last_name from actor;
-```
-```
+
 +----+-------------+-------+------------+-------+---------------+---------------------+---------+------+------+----------+-------------+
 | id | select_type | table | partitions | type  | possible_keys | key                 | key_len | ref  | rows | filtered | Extra       |
 +----+-------------+-------+------------+-------+---------------+---------------------+---------+------+------+----------+-------------+
@@ -121,12 +116,13 @@ explain select last_name from actor;
 +----+-------------+-------+------------+-------+---------------+---------------------+---------+------+------+----------+-------------+
 ```
 ### ALL
-ALLはすべてのデータを順次検索をしている状態です。
+ALLは全件検索（フルテーブルスキャン）を行った場合に表示されます。
+以下の例のようにindexやユニークキーを何も使用せずに検索するとALLとなります。
 typeの中では最も遅い検索の方法となります。
-```sql
+ALLが表示された場合はスロークエリとなっている可能性があるため、where句でインデックスを利用するなど、クエリの改善をした方が良いです。
+```
 explain select * from actor;
-```
-```
+
 +----+-------------+-------+------------+------+---------------+------+---------+------+------+----------+-------+
 | id | select_type | table | partitions | type | possible_keys | key  | key_len | ref  | rows | filtered | Extra |
 +----+-------------+-------+------------+------+---------------+------+---------+------+------+----------+-------+
@@ -134,3 +130,5 @@ explain select * from actor;
 +----+-------------+-------+------------+------+---------------+------+---------+------+------+----------+-------+
 ```
 ## まとめ
+今回はtypeについて具体例と共にまとめました。
+少しでも参考になれば嬉しいです！
